assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap");
html,
body {
  height: 100%;
  font-family: "Ubuntu", sans-serif;
}

#unsupported-browser {
  display: none;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  text-align: center;
}

.preloader {
  position: fixed;
  left: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background: url("../../assets/images/loading.gif") 50% 50% no-repeat #ffffff;
}

#login-section {
  height: 100%;
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  background-color: #f8f8f8;
}

.login-row {
  min-height: 50vh;
}

.login-card {
  min-width: 320px;
}

.login-card .card-body {
  height: 100%;
}

.form-control {
  height: auto;
  padding: 10px;
}

#sidebar-wrapper {
  min-height: 100vh;
  margin-left: -15rem;
  -webkit-transition: margin 0.25s ease-out;
  -moz-transition: margin 0.25s ease-out;
  -o-transition: margin 0.25s ease-out;
  transition: margin 0.25s ease-out;
}

#sidebar-wrapper .sidebar-container {
  width: 15rem;
}

/* css pattern from: https://www.heropatterns.com/ */
#content-wrapper {
  min-width: 100vw;
  background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23000000' fill-opacity='0.03'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.container-fluid {
  height: 80vh;
}

#content-section.toggled #sidebar-wrapper {
  margin-left: 0;
}

#noteActions {
  min-height: 38px;
}
#noteActionsButtons {
  display: none;
}
#renderUsername {
  font-size: 32px;
}

/* responsive */
@media (min-width: 576px) {
  .login-card {
    max-width: 500px;
  }
}

@media (min-width: 768px) {
  .login-card {
    max-width: 600px;
  }
  #sidebar-wrapper {
    margin-left: 0;
  }

  #content-wrapper {
    min-width: 0;
    width: 100%;
  }

  #content-section.toggled #sidebar-wrapper {
    margin-left: -15rem;
  }
}

@media (min-width: 992px) {
  .login-card {
    max-width: 900px;
  }
}

@media (min-width: 1200px) {
  .login-card {
    max-width: 1000px;
  }
}

